# AIDM-GRUPO-5

./: 01_training_hpo_mlflow.ipynb  02_byoc_build_push_deploy.ipynb  03_model_governance_monitoring.ipynb  README.md  baseline_features.csv  main.py  sm-hyperparameter_tuning_pytorch.ipynb  sm-mlflow_training.ipynb
BYOC-Single-Model/: 02_byoc_build_push_deploy.ipynb  spacy-NER.ipynb
BYOC-Single-Model/container/: .dockerignore  Dockerfile
BYOC-Single-Model/container/Classificador-binario/: main.py  predictor.py  pyproject.toml  requirements.txt
architecture/: c4-container.md  c4-system-context.md
data/: validation.csv
training_code/: pyproject.toml  requirements.txt  train.py
