[project]
name = "classificador-binario"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
    "flask>=3.1.2",
    "gevent>=25.9.1",
    "gunicorn>=23.0.0",
    "joblib==1.3.2",
    "numpy==1.26.4",
    "pandas>=2.3.3",
    "scikit-learn==1.2.1",
    "scipy==1.11.4",
    "xgboost==2.0.3",
]
